# galois

./: CHANGELOG.md  galois.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.7/: galois-0.1.0.0-inplace-galois-lib.conf  package.cache
lib/: DensePolynomial.hs  NumberUtils.hs
tests/: DensePolynomialTest.hs
