cabal-version:      2.4
name:               galois
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: Haskell library for polynomial manipulation

-- A longer description of the package.
-- description: Haskell library that allows symbolic calculation with polynomials including factorization
-- derivation and integration.

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             domlija
maintainer:         mislav@domlija.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library galois-lib
    exposed-modules: DensePolynomial
    hs-source-dirs: lib
    build-depends: base ^>=4.16.4.0
    default-language: Haskell2010
    tests: True

executable galois
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
    tests: True



test-suite DensePolynomialTests
    type: exitcode-stdio-1.0
    main-is: DensePolynomialTest.hs
    build-depends: base ^>=4.16.4.0, HUnit ^>=1.6, galois-lib
    hs-source-dirs: tests
    default-language: Haskell2010
    tests: True

